--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 asgiref==3.5.2
 Django==4.0.5
+django-environ==0.9.0
+django-ranged-response==0.2.0
+django-simple-captcha==0.5.17
 factory-boy==3.2.1
 Faker==13.14.0
 mysqlclient==2.1.1
